Changelog
=========

0.5.3 - unreleased
------------------

* Added wildcard support to the 'before' and 'after' parameters of the
  fieldset 'move' utility function.
  [davisagli]

* Fixes for Zope 2.12 compatibility.
  [davisagli]

* Don't display an 'Apply changes' button if you don't define an
  update_schema.

* Declare xmlnamespace into 'layout.pt' and 'subform.pt' templates

* Added support for an editsubform_factory for an EditForm so you can
  override the default behavior for a sub form now.

* Changed css in crud-table.pt for a table to "listing" so that tables
  now look like plone tables.

* Copy translation files to an english folder, so if your browser
  negociate to ``en,nl``, you will get english translations instead of
  dutch ones (like expected).

* Send an event IAfterWidgetUpdateEvent after updating display widgets
  manually in a CRUD form.

0.5.2 - 2008-08-28
------------------

* Add a namespace traversal adapter that allows traversal to widgets. This
  is useful for AJAX calls, for example.

0.5.1 - 2008-08-21
------------------

* Add batching to ``plone.z3cform.crud`` CrudForm.

* Look up the layout template as an IPageTemplate adapter. This means that
  it is possible for Plone to provide a "Ploneish" default template for forms
  that don't opt into this, without those forms having a direct Plone
  dependency.

* Default to the titleless form template, since the layout template will
  provide a title anyway.

* In ``plone.z3cform.layout``, allow labels to be defined per form
  instance, and not only per form class.

0.5.0 - 2008-07-30
------------------

* No longer depend on <3.5 of zope.component.

0.4 - 2008-07-25
----------------

* Depend on zope.component<3.5 to avoid ``TypeError("Missing
  'provides' attribute")`` error.

* Allow ICrudForm.add to raise ValidationError, which allows for
  displaying a user-friendly error message.

* Make the default layout template CMFDefault- compatible.

0.3 - 2008-07-24
----------------
